# mini_latent_pd

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  main.py  pyproject.toml  pyproject_old.toml  tasks.py
configs/: paths_config.yaml  train_config.yaml
configs/callbacks/: default_callbacks.yaml
configs/data/: default_data_module.yaml  moons_data_module.yaml
configs/experiment/: debug.yaml  moons.yaml
configs/logger/: wandb_logger.yaml
configs/model/: default_model.yaml  latent_flow.yaml  moons_model.yaml  vae.yaml
configs/sweep/: latent_vae_sweep.yaml
configs/trainer/: default_trainer.yaml
docs/: mkdocs.yaml
docs/source/: index.md
notebooks/: load_minifold.ipynb  train.ipynb
src/mini_latent_pd/: __init__.py  flow_matching_module.py  train.py  vae_module.py
src/mini_latent_pd/callbacks/: __init__.py  image_logger.py
src/mini_latent_pd/data/: MNIST_datamodule.py  __init__.py  mdcath_dataset.py  moons_datamodule.py
src/mini_latent_pd/models/: __init__.py  mlp.py  unet.py
src/mini_latent_pd/models/minifold/data/: config.py  data_pipeline.py  data_transforms.py  feature_pipeline.py  input_pipeline.py  mmcif_parsing.py  of_data.py  parsers.py
src/mini_latent_pd/models/minifold/model/: heads.py  miniformer.py  model.py  structure.py
src/mini_latent_pd/models/minifold/model/kernels/: gating.py  mlp.py
src/mini_latent_pd/models/minifold/train/: loss.py
src/mini_latent_pd/models/minifold/utils/: esm.py  feats.py  init.py  protein.py  residue_constants.py  rigid_utils.py  tensor_utils.py
src/mini_latent_pd/modules/: __init__.py  latent_processors.py  samplers.py  schedulers.py  solvers.py
src/mini_latent_pd/util/: __init__.py  plot_imgs.py
tests/: conftest.py  test_config.py  test_data.py  test_model.py  test_train_script.py
