[project]
name = "mini_latent_pd"
version = "0.0.1"
description = "A pytorch package for doing protein dynamics in latent spaces defined by pretrained protein folding models"
authors = [
  { name = "Moust Holmes", email = "moust.holmes@bio.ku.dk" },
]
license = { file = "LICENSE" }
keywords = ["machine learning", "flow matching", "generative models"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Programming Language :: Python :: 3",
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "biopython>=1.86",
    "datasets>=4.5.0",
    "dm-tree>=0.1.9",
    "einops>=0.8.2",
    "fair-esm>=2.0.0",
    "h5py>=3.15.1",
    "huggingface-hub>=1.3.4",
    "hydra-core>=1.3.2",
    "ipywidgets>=8.1.8",
    "lightning>=2.6.0",
    "matplotlib>=3.10.3",
    "ml-collections>=1.1.0",
    "modelcif>=1.6",
    "pydantic>=2.12.5",
    "scikit-learn>=1.8.0",
    "torch>=2.8.0",
    "torchvision>=0.23.0",
    "wandb>=0.24.0",
]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["I", "N", "E", "W"]
ignore = ["N812", "N813"]

[tool.coverage.run]
omit = ["tests/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = [
    "--strict-markers",
    "--doctest-modules",
    "--color=yes",
    "--import-mode=importlib",
]
pythonpath = ["src"]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::UserWarning",
]

[dependency-groups]
dev = [
    "bandit>=1.9.3",
    "black>=26.1.0",
    "invoke>=2.2.1",
    "mkdocs-material>=9.7.1",
    "mkdocstrings-python>=2.0.1",
    "mypy>=1.19.1",
    "nbqa>=1.9.1",
    "nbstripout>=0.9.0",
    "pre-commit>=4.5.1",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "ruff>=0.14.13",
    "types-pyyaml>=6.0.12.20250915",
    "types-requests>=2.32.4.20260107",
    "types-setuptools>=80.9.0.20251223",
]
